# TAUV-Playground

./: .gitignore  README.md
Path Marker Detection/: marker_detection.py
Perception/Bottle-Detector-Standalone/: bottle_detector_standalone.py
Perception/ros_gst_bridge/src/ros_gst_bridge/: CMakeLists.txt  Pipeline.cpp
acoustics/: acoustics_test.py  xcorr_test.py
acoustics/backends/: adalm_serial.py
acoustics/frontends/: rev_4.py
chevron-localization/: chevron_localization.py  main.py
chevron-localization/data/: test-5.mov
dynamics-parameter-estimation/: dynamics-parameter-estimation.nb  dynamics.py  euler-acceleration.nb  spkf.py
dynamics-parameter-estimation/data/bags-12-01-22/: navigation_state_0.csv  navigation_state_1.csv  navigation_state_10.csv  navigation_state_11.csv  navigation_state_12.csv  navigation_state_13.csv  navigation_state_14.csv  navigation_state_15.csv  navigation_state_2.csv  navigation_state_8.csv  navigation_state_9.csv  wrench_0.csv  wrench_1.csv  wrench_12.csv  wrench_13.csv  wrench_14.csv  wrench_15.csv  wrench_2.csv  wrench_3.csv  wrench_4.csv  wrench_5.csv  wrench_7.csv  wrench_8.csv
gate-detector/: CVPointHelper.py  gateDetector.py
model-identification/: model_identification.m  model_linear_damping_m.m
ros_gst_bridge/: README.md  ros_gst_bridge.launch
short-baseline-localization/: sim.m
target-localization/: color_correction.py  main.py  target_localization.py
zybo-z7-tdoa/: generate_coefficients.py  stimulus.txt  tdoa.py
zybo-z7-tdoa/zybo-z7-tdoa/: tdoa.xsa  zybo-z7-tdoa.xpr
(+900 files in other folders)
